fix: image preview overflow on desktop layout

--- a/src/components/upload-modal/upload-modal.scss
+++ b/src/components/upload-modal/upload-modal.scss
@@ -12,23 +12,40 @@
   height: auto;
   width: 100%;
   overflow-y: hidden;
+  left: 2.5%;
   img {
-    max-width: calc(100% - 2rem);
+    max-width: calc(80% - 2rem);
     max-height: 80%;
   }
 }
 
 @media screen and (min-width: 1024px) {
   .upload-modal-container {
-    width: 60%;
-    left: 20%;
+    width: 80%;
+    left: 10%;
   }
   .file-preview {
-    left: 12.5%;
+    left: 2.5%;
     height: calc(100% - 10rem);
     img {
-      max-width: calc(100% - 1rem);
+      max-width: calc(80% - 1rem);
       max-height: 80%;
+    }
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .upload-modal-container {
+    width: 50%;
+    left: 25%;
+  }
+
+  .file-preview {
+    left: 2.5%;
+    height: calc(100% - 10rem);
+    img {
+      max-width: calc(70% - 1rem);
+      max-height: 70%;
     }
   }
 }
